--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,18 +7,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up PATH
-        run: |
-          echo "${ANDROID_HOME}/build-tools/29.0.3" >> $GITHUB_PATH
-      - name: Set up JDK 16
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 16
+          java-version: 1.8
+
+      - name: Setup Android SDK Tools
+        uses: android-actions/setup-android@v2.0.1
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+      - name: build-tools
+        run: sdkmanager "build-tools;29.0.3"
+
+      - name: Add Android SDK to PATH
+        run: echo "${ANDROID_HOME}/build-tools/29.0.3" >> $GITHUB_PATH
+
       - name: Mark as executable
         run: chmod +x gradlew
+
       - name: Build mod jar
         run: ./gradlew buildDex
+
       - name: Upload built jar file
         uses: actions/upload-artifact@v2
         with:
