--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    ext {
+        sdkVersion = '30'
+        sdkRoot = System.getenv("ANDROID_HOME")
+
+        doExec = { cmd ->
+            def proc = cmd.execute(null, new File("$buildDir/libs"))
+            proc.waitForProcessOutput(System.out, System.err)
+        }
+    }
+}
+
 plugins{
     id "java"
     id "groovy"
@@ -54,14 +66,19 @@ task dexify(type: Jar){
     doFirst{
         exec{
             workingDir(dexedArtifact.parent);
-            
-            def command = ["d8", "--min-api", "16", "--output", dexedArtifact, jarArtifact];
-            if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")){
-                commandLine("cmd", "/c", *command);
-            }else{
-                commandLine(*command);
-            }
 
+            def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
+            def dependencies = files.collect{ "--classpath $it.path" }.join(" ")
+
+            //dex and desugar files - this requires d8 in your PATH
+            doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar")
+
+//            def command = ["d8", "--min-api", "16", "--output", dexedArtifact, jarArtifact];
+//            if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")){
+//                commandLine("cmd", "/c", *command);
+//            }else{
+//                commandLine(*command);
+//            }
         }
     }
 
