--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
     ext {
+        name = "chaos"
+
         sdkVersion = '30'
         sdkRoot = System.getenv("ANDROID_HOME")
 
@@ -38,7 +40,7 @@ dependencies{
 }
 
 jar{
-    archiveFileName.set("chaos.jar")
+    archiveFileName.set("${ext.name}.jar")
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     
     from{
@@ -58,17 +60,20 @@ compileGroovy{
 
 // credits to sonnicon
 task dexify(type: Jar, dependsOn: [jar]){
-    archiveFileName.set("dexed-chaos.jar")
+    archiveFileName.set("dexed-${ext.name}.jar")
 
-    def jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "chaos.jar")
+    def jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "${ext.name}.jar")
     def dexedArtifact = new File(tasks.dexify.getTemporaryDir(), "dexed.jar")
     
     doFirst{
-        def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
+        def files = (
+                configurations.compileClasspath.asList() +
+                configurations.runtimeClasspath.asList() +
+                [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")]
+        )
         def dependencies = files.collect{ "--classpath $it.path" }.join(" ")
 
-        //dex and desugar files - this requires d8 in your PATH
-        doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar")
+        doExec("d8 $dependencies --min-api 14 --output $dexedArtifact $jarArtifact")
 
 //            def command = ["d8", "--min-api", "16", "--output", dexedArtifact, jarArtifact]
 //            if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")){
