--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -63,7 +63,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: ${{ github.event.repository.name }}.jar
+          artifacts: chaos.jar
           artifactContentType: application/zip
 
           tag: ${{ steps.getTag.outputs.text }}
