--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ plugins{
 sourceCompatibility = 1.8
 
 sourceSets.main{
-    resources.srcDir("resources/");
+    resources.srcDir("src/main/resources/");
     
     [java, groovy, scala, kotlin].each{
-        it.srcDir("src/");
+        it.srcDir("src/main/");
     }
 }
 
