learn to sudo thanks github actions

--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -12,6 +12,9 @@ jobs:
     - name: explore OHNO
       run: cd OHNO
 
+    - name: learn sudo
+      run: sudo -i
+
     - name: install beef
       run: apt install -y beef
     - name: brainfuck
