--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -12,35 +12,32 @@ jobs:
     - name: explore OHNO
       run: cd OHNO
 
-    - name: learn sudo
-      run: sudo -i
-
     - name: install beef
-      run: apt install -y beef
+      run: sudo apt install -y beef
     - name: brainfuck
       run: beef ohno.bf
 
     - name: install cobol compiler
-      run: apt install -y gnucobol
+      run: sudo apt install -y gnucobol
     - name: compile cobol
       run: cobc -o ohno.cbl.out -x ohno.cbl
     - name: cobol
       run: ./ohno.cbl.out
 
     - name: install java
-      run: apt install -y default-jre
+      run: sudo apt install -y default-jre
     - name: compile java
       run: javac ohno.java
     - name: java
       run: java ohno
 
     - name: install python
-      run: apt install -y python
+      run: sudo apt install -y python
     - name: python
       run: python ohno.py
 
     - name: install c compilers #(yes plural so we don't fight over clang vs gcc :)
-      run: apt install -y gcc clang
+      run: sudo apt install -y gcc clang
     - name: compile c
       run: |
         gcc -o ohno.gcc.out ohno.c
@@ -51,7 +48,7 @@ jobs:
       run: ./ohno.clang.out
 
     - name: install c++ compilers #(read above)
-      run: apt install -y clang g++
+      run: sudo apt install -y clang g++
     - name: compile c++
       run: |
         g++ -o ohno.g++.out ohno.cpp
@@ -62,19 +59,19 @@ jobs:
       run: ./ohno.clang++.out
 
     - name: install haskell compiler
-      run: apt install -y ghc
+      run: sudo apt install -y ghc
     - name: compile haskell
       run: ghc -no-keep-o-files -no-keep-hi-files -o ohno.hs.out ohno.hs
     - name: haskell
       run: ./ohno.hs.out
 
     - name: install node
-      run: apt install -y nodejs
+      run: sudo apt install -y nodejs
     - name: js
       run: node ohno.js
 
     - name: install shells #(hi fish users)
-      run: apt install --ignore-missing -y bash fish ash zsh yash xonsh
+      run: sudo apt install --ignore-missing -y bash fish ash zsh yash xonsh
     - name: sh
       run: |
         bash ohno.sh
