--- a/src/main/resources/bundles/bundle.properties
+++ b/src/main/resources/bundles/bundle.properties
@@ -2,3 +2,5 @@ block.community-mod-trio.name = Trio
 block.community-mod-trio.description = upgraded version of Duo, fires something that I haven't test yet
 block.community-mod-quadro.name = Quadro
 block.community-mod-quadro.description = upgraded version of Trio, fires something that I haven't test yet
+block.community-mod-reyetor.description = The God of all routers and distributors.
+block.community-mod-reyetor.details = The hell awaits.
