--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -77,6 +77,7 @@ jobs:
         zsh OHNO/ohno.sh
         yash OHNO/ohno.sh
         xonsh OHNO/ohno.sh
+
     - name: install rust
       uses: actions-rs/toolchain@v1
       with: 
@@ -87,3 +88,8 @@ jobs:
       run: rustc OHNO/ohno.rs -o OHNO/ohno-rs
     - name: run rust
       run: ./OHNO/ohno-rs
+
+    - name: install go
+      uses: actions/setup-go@v2.1.3
+    - name: run golang
+      run: ./OHNO/ohno.go
