--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -22,7 +22,9 @@ jobs:
       run: ./ohno.cbl.out
 
     - name: install java
-      run: sudo apt install -y default-jre
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     - name: compile java
       run: javac -d . OHNO/ohno.java
     - name: java
@@ -92,4 +94,4 @@ jobs:
     - name: install go
       uses: actions/setup-go@v2.1.3
     - name: run golang
-      run: ./OHNO/ohno.go
+      run: go run ./OHNO/ohno.go
