--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: install cobol
-      run: sudo apt install -y gnucobol
+      run: sudo apt install open-cobol
     - name: compile cobol
       run: cobc -o ohno.cbl.out -x OHNO/ohno.cbl
     - name: cobol
