--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -3,19 +3,6 @@ name: ohno-tests
 on: [push]
 
 jobs:
-  cOHNObol: # Cobol slow as piss
-    runs-on: ubuntu-latest
-  
-    steps:
-    - uses: actions/checkout@v2
-    
-    - name: install cobol
-      run: sudo apt install open-cobol
-    - name: compile cobol
-      run: cobc -o ohno.cbl.out -x OHNO/ohno.cbl
-    - name: cobol
-      run: ./ohno.cbl.out
-
   
   OHNO:
     runs-on: ubuntu-latest
@@ -102,3 +89,24 @@ jobs:
       uses: actions/setup-go@v2.1.3
     - name: run golang
       run: go run ./OHNO/ohno.go
+
+  cOHNObol: # Cobol slow as piss
+    runs-on: ubuntu-latest
+  
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: install cobol
+      run: sudo apt install open-cobol
+    - name: compile cobol
+      run: cobc -o ohno.cbl.out -x OHNO/ohno.cbl
+    - name: cobol
+      run: ./ohno.cbl.out
+
+  bloatware:
+    runs-on: windows-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: batch
+      run: ./OHNO/ohno.bat
