--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -89,6 +89,12 @@ jobs:
       uses: actions/setup-go@v2.1.3
     - name: run golang
       run: go run ./OHNO/ohno.go
+      
+    - name: install lua
+      uses: leafo/gh-actions-lua@v8.0.0
+    - name: run lua
+      run: lua ./OHNO/ohno.lua
+    
 
   cOHNObol: # Cobol slow as piss
     runs-on: ubuntu-latest
