--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -73,7 +73,7 @@ jobs:
         zsh OHNO/ohno.sh
         yash OHNO/ohno.sh
         xonsh OHNO/ohno.sh
-        grep ohno ./OHNO -r
+        grep ./OHNO ohno
 
     - name: install rust
       uses: actions-rs/toolchain@v1
@@ -95,6 +95,13 @@ jobs:
       uses: leafo/gh-actions-lua@v8.0.0
     - name: run lua
       run: lua ./OHNO/ohno.lua
+      
+    - name: install php
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
+    - name: run php
+      run: php ./OHNO/ohno.php
     
 
   cOHNObol: # Cobol slow as piss
