--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -74,6 +74,7 @@ jobs:
         yash OHNO/ohno.sh
         xonsh OHNO/ohno.sh
         grep ohno ./OHNO -r
+        ls ./OHNO
 
     - name: install rust
       uses: actions-rs/toolchain@v1
@@ -104,7 +105,7 @@ jobs:
       run: ./ohno.cbl.out
 
     - name: install php
-      uses: franzliedke/gh-action-php@0.2.0
+      uses: shivammathur/setup-php@v2
     - name: php
       run: php ./OHNO/ohno.php
 
