--- a/.github/workflows/ohno.yml
+++ b/.github/workflows/ohno.yml
@@ -106,7 +106,8 @@ jobs:
 
     - name: install nim
       uses: jiro4989/setup-nim-action@v1.1.4
-    - name: nim r ./OHNO/ohno.nim
+    - name: run nim
+      run: nim r ./OHNO/ohno.nim
       
     - name: install perl
       uses: shogo82148/actions-setup-perl@v1
