--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ repositories{
 }
 
 dependencies{
+    compileOnly("com.github.Anuken.Mindustry:desktop:v127.2")
+    compileOnly("com.github.Anuken.Arc:arc-core:v127.2")
+    compileOnly("com.github.Anuken.Arc:backend-sdl:v127.2")
+    compileOnly("com.github.Anuken.Mindustry:core:v127.2")
     compileOnly("com.github.Anuken.Mindustry:core:v127.2")
     implementation("org.codehaus.groovy:groovy-all:3.0.8")
     implementation("org.scala-lang:scala-library:2.11.12")
