--- a/build.gradle
+++ b/build.gradle
@@ -15,20 +15,6 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0")
     }
 }
-ext.versions = [
-        'nd4j'         : '1.0.0-beta7',
-        'dl4j'         : '1.0.0-beta7',
-        'weka'         : '3.8.4',
-        'junit'        : '4.12',
-        'log4j'        : '2.11.2',
-        'ark_tweet_nlp': '0.3.2',
-        'commons_lang' : '2.6',
-        'openblas'     : '0.2.19-1.3',
-        'inetutils4j'  : '0.0.2',
-        'reflections'  : '0.9.10',
-        'lombok'       : '1.18.6',
-        'xml_apis'     : '1.0.b2'
-]
 
 plugins{
     id "java"
@@ -58,24 +44,22 @@ dependencies{
     implementation("org.codehaus.groovy:groovy-all:3.0.8")
     implementation("org.scala-lang:scala-library:2.11.12")
     implementation("org.jcuda:jcuda:11.2.0")
-    implementation "nz.ac.waikato.cms.weka:weka-stable:$versions.weka"
-    implementation "org.deeplearning4j:deeplearning4j-core:$versions.dl4j"
-    implementation "org.deeplearning4j:deeplearning4j-nlp:$versions.dl4j"
-    implementation "org.deeplearning4j:deeplearning4j-zoo:$versions.dl4j"
-    implementation "org.deeplearning4j:deeplearning4j-parallel-wrapper:$versions.dl4j"
-    implementation "org.nd4j:nd4j-native-platform:$versions.nd4j"
-    implementation "org.nd4j:nd4j-native-api:$versions.nd4j"
-    implementation "org.bytedeco.javacpp-presets:openblas-platform:$versions.openblas"
-    implementation "org.apache.logging.log4j:log4j-api:$versions.log4j"
-    implementation "org.apache.logging.log4j:log4j-core:$versions.log4j"
-    implementation "org.apache.logging.log4j:log4j-slf4j-impl:$versions.log4j"
-    implementation ("edu.cmu.cs:ark-tweet-nlp:$versions.ark_tweet_nlp"){
-        exclude group: 'junit', module: 'junit'
-    }
-    implementation "commons-lang:commons-lang:$versions.commons_lang"
-    implementation "org.reflections:reflections:$versions.reflections"
-    implementation "org.projectlombok:lombok:$versions.lombok"
-    implementation "xml-apis:xml-apis:$versions.xml_apis"
+    implementation("nz.ac.waikato.cms.weka:weka-stable:3.8.4")
+    implementation("org.deeplearning4j:deeplearning4j-core:1.0.0-beta7")
+    implementation("org.deeplearning4j:deeplearning4j-nlp:1.0.0-beta7")
+    implementation("org.deeplearning4j:deeplearning4j-zoo:1.0.0-beta7")
+    implementation("org.deeplearning4j:deeplearning4j-parallel-wrapper:1.0.0-beta7")
+    implementation("org.nd4j:nd4j-native-platform:1.0.0-beta7")
+    implementation("org.nd4j:nd4j-native-api:1.0.0-beta7")
+    implementation("org.bytedeco.javacpp-presets:openblas-platform:0.2.19-1.3")
+    implementation("org.apache.logging.log4j:log4j-api:2.11.2")
+    implementation("org.apache.logging.log4j:log4j-core:2.11.2")
+    implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.11.2")
+    implementation("edu.cmu.cs:ark-tweet-nlp:0.3.2")
+    implementation("commons-lang:commons-lang:2.6")
+    implementation("org.reflections:reflections:0.9.10")
+    implementation("org.projectlombok:lombok:1.18.6")
+    implementation("xml-apis:xml-apis:1.0.b2")
 }
 
 jar{
