--- a/src/main/resources/bundles/bundle.properties
+++ b/src/main/resources/bundles/bundle.properties
@@ -4,3 +4,6 @@ block.community-mod-quadro.name = Quadro
 block.community-mod-quadro.description = upgraded version of Trio, fires something that I haven't test yet
 block.community-mod-reyetor.description = The God of all routers and distributors.
 block.community-mod-reyetor.details = The hell awaits.
+
+link.unlock-all.description = Unlock all game content now.
+link.unlock-all.title = Unlock All Content
