--- a/src/main/resources/bundles/bundle.properties
+++ b/src/main/resources/bundles/bundle.properties
@@ -5,5 +5,5 @@ block.community-mod-quadro.description = upgraded version of Trio, fires somethi
 block.community-mod-reyetor.description = The God of all routers and distributors.
 block.community-mod-reyetor.details = The hell awaits.
 
-link.unlock-all.description = Unlock all game content now.
-link.unlock-all.title = Unlock All Content
+link.community-mod.unlock-all.description = Unlock all game content now.
+link.community-mod.unlock-all.title = Unlock All Content
