--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies{
     compileOnly("com.github.Anuken.Arc:arc-core:v127.2")
     compileOnly("com.github.Anuken.Arc:backend-sdl:v127.2")
     compileOnly("com.github.Anuken.Mindustry:core:v127.2")
+    implementation("org.codehaus.groovy:groovy-all:3.0.8")
+    implementation("org.scala-lang:scala-library:2.11.12")
     implementation("org.deeplearning4j:deeplearning4j-core:1.0.0-beta7")
     implementation("org.deeplearning4j:deeplearning4j-nlp:1.0.0-beta7")
     implementation("org.deeplearning4j:deeplearning4j-zoo:1.0.0-beta7")
