--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies{
     compileOnly("com.github.Anuken.Arc:arc-core:v127.2")
     compileOnly("com.github.Anuken.Arc:backend-sdl:v127.2")
     compileOnly("com.github.Anuken.Mindustry:core:v127.2")
+    compile group: 'org.tensorflow', name: 'tensorflow-core-platform', version: '0.3.1'
     implementation("org.codehaus.groovy:groovy-all:3.0.8")
     implementation("org.scala-lang:scala-library:2.11.12")
     implementation("org.deeplearning4j:deeplearning4j-core:1.0.0-beta7")
